[package]
name = "uniswap_v3_math"
rust-version = "1.88"
version = "0.6.1"
edition = "2024"
license = "MIT"
description = "Uniswap V3 math in Rust"
readme = "README.md"
homepage = "https://github.com/0xKitsune/uniswap_v3_math"
repository = "https://github.com/0xKitsune/uniswap_v3_math"
keywords = ["uniswapV3", "math"]
exclude = ["target/*", ".github/*", ".gitignore", "Uniswap/*"]

[dependencies]
alloy = { version = "1.0.17", features = [
  "contract",
  "providers",
], optional = true }
alloy-primitives = "1.2.1"
eyre = "0.6"
thiserror = "2.0"

[features]
contract = ["dep:alloy"]
